Prod-EU/force-app/main/default/objects/Papyrus_Document__c/Papyrus_Document__c.object-meta.xml
<CustomObject>
    <description>This object holds the reference links to Papyrus scanned documents, which are stored in GCP. This object can be retired once all the Papyrus functionality is moved to current Germany model where the documents will be stored in SF.</description>
    <label>Papyrus Document</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Papyrus Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>