Prod-EU/force-app/main/default/objects/Papyrus_Document__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Papyrus Documents</relationshipLabel>
    <relationshipName>Papyrus_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>