Prod-EU/force-app/main/default/objects/Papyrus_Document__c/fields/Document_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Document_Created_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Created By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>