Prod-EU/force-app/main/default/objects/Papyrus_Document__c/fields/Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Document_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Document Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>