Prod-EU/force-app/main/default/objects/Papyrus_Document__c/fields/Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Link__c</fullName>
    <description>Reference to the Google document link</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>