Prod-EU/force-app/main/default/objects/Papyrus_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>