Prod-EU/force-app/main/default/objects/Papyrus_Document__c/fields/View_Document__c.field-meta.xml
<CustomField>
    <fullName>View_Document__c</fullName>
    <formula>IF($Organization.Id = &apos;00D0Q0000008avs&apos;, HYPERLINK($CustomMetadata.Salesforce_Environment_Setting__mdt.Production.Papyrus_URL__c + &apos;?id=&apos; + Document_Link__c , &quot;View Document&quot;, &quot;_blank&quot;), HYPERLINK($CustomMetadata.Salesforce_Environment_Setting__mdt.Sandbox.Papyrus_URL__c + &apos;?id=&apos; + Document_Link__c , &quot;View Document&quot;, &quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Document</label>
    <type>Text</type>
</CustomField>